tests/errors/missing_val_56/e3.src
.IPPcode21

DEFVAR GF@push
PUSHS GF@push
